--- a/Saucy.html
+++ b/Saucy.html
@@ -21,7 +21,7 @@
 			<div class="navtoggle" id="myNavtoggle">
 			<div class="row">
 				<div class="column col-md-6 col-lg-7">
-			<a href="index.html"><img src="IMG/Logo2.png" alt="Marcelle Khalil" class="logo"></a>
+			<a href="index.html"><img src="IMG/Marcelle-Logo-5.png" alt="Marcelle Khalil" class="logo"></a>
 		</div>
 			<nav class="column col-md-6 col-lg-5">
 				<ul class="topbottombordersout">
@@ -37,46 +37,37 @@
 </div>
 	</header>
 	<main>
-		<br>
 			<div id="project">
 				<h1 class="center">Saucy</h1>
-			</div>
-			<br>
-			<div>
 				<picture>
 					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Recipe_app_Responsive_Prototypes_600px-2.jpg" media="(max-width:767px)">
 					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Recipe_app_responsive_prototypes@1200pxe-2.jpg" alt="Pinch Iphone Image">
 				</picture>
 			</div>
-			<br>
+
 			<!--Introduction/ Background-->
 			<div id="project">
 				<h3 class="center">Introduction</h3>
 				<p>
 					Saucy is a responsive recipe application that allows users to add, save, rate, and share different recipes. Users are able to search for recipes by filtering fo ingredients and country of origin.
 				</p>
-			</div>
-			<br>
-			<!--My Process-->
-			<div>
 				<picture>
 					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Saucy_Prototype_Splash@600.jpg" media="(max-width:767px)">
 					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Saucy_Prototype_Splash@1200.jpg" alt="Saucy iPhone Prototype Image">
 				</picture>
-			</div>
-			<br>
+				</div>
 			<!--Research-->
-			<div>
+			<div id="project">
 				<h3 class="center">Research</h3>
 				<p>
 					A competitor analysis and other research was conducted by studying a variety of recipe applications and websites. The research included the following:
 				</p>
-				<ul>
-					<li>Competitor overviews</li>
-					<li>Marketing profile</li>
-					<li>SWOT analysis</li>
-					<li>UX Analysis</li>
-				</ul>
+
+					<p>1. Competitor overviews</p>
+					<p>2. Marketing profile</p>
+					<p>3. SWOT analysis</p>
+					<p>UX Analysis</p>
+
 				<h4>
 					<b><em>Who</em></b> are you designing for?
 				</h4>
@@ -124,15 +115,15 @@
 					<li>Users have difficulty finding certain ingredients at their local grocery stores</li>
 					<li>Users are too tired to cook after work</li>
 					<li>It's hard to make healthy ingredients taste good</li>
-				<br>
+				</ul>
 				<picture>
 					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Saucy_SWOT_Analysis@600.jpg" media="(max-width:767px)">
 					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Saucy_SWOT_Analysis@1200.jpg" alt="SWOT Analysis Image">
 				</picture>
 			</div>
-			<br>
+
 			<!--Ideation-->
-			<div>
+			<div id="project">
 				<h3 class="center">Ideation</h3>
 				<p>
 					User personas were created using all of the information collected from the research and user interviews in order to better understand flows and scenarios.
@@ -147,26 +138,24 @@
 					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Saucy_User_Flow@600-2.jpg" media="(max-width:767px)">
 						<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Saucy_User_Flow@1200-2.jpg" alt="User Flow Image">
 			</div>
-			<br>
 			<!--Wireframe-->
-			<div>
+			<div id="project">
 				<h3 class="center">Wireframe</h3>
 				<p>
 					After the research and ideation phase, I developed low-fidelity wireframes both by hand and mid-fidelity wireframes using Sketch. The wireframes were created with the user stories in mind. Since Saucy is a responsive application, breakpoints for each type of screen were sketched during wireframing.
 				</p>
 				<picture>
 					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/low-fidelity_wireframes_saucy@600.jpg" media="(max-width:767px)">
-					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/low_fidelity_wireframes-@1200-saucy.jpg" alt="Low-Fidelity Wireframe Image">
+					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/low_fidelity_wireframes_saucy@1200.jpg" alt="Low-Fidelity Wireframe Image">
 				</picture>
 				<br>
 				<picture>
 					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Mid-Fidelity-wireframes-@600-saucy.jpg" media="(max-width:767px)">
-					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Mid_Fidelity-wireframes-@1200-saucy.jpg" alt="Mid-Fidelity Wireframe Image">
+					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Mid-Fidelity-wireframes-@1200-saucy.jpg" alt="Mid-Fidelity Wireframe Image">
 				</picture>
 			</div>
-			<br>
 			<!--Design-->
-			<div>
+			<div id="project">
 				<h3 class="center">Design</h3>
 				<p>
 					My design goal was to create something that would inspire people to cook by envoking warmth and energy. I decided to use bright colors and create playful icons to make the application fun and clean.
@@ -179,31 +168,31 @@
 			</div>
 
 			<!--Prototype-->
-			<div>
+			<div id="project">
 				<h3 class="center">Prototype</h3>
 				<p>
 					In addition to the interviews, other individuals participated in usability and preference tests throughout the design process.
 				</p>
 				<h4>
-					Usability Testing
+					<b>Usability Testing</b>
 				</h4>
 				<p>
 					Testers were asked to go through the filter process in order to create a personalixed home page. They were asked to explain their thoughts as they completed the task.
 				</p>
 				<h4>
-					Preference Testing
+					<b>Preference Testing</b>
 				</h4>
 				<p>
-					Preference tests were used to gather feedback on button types and typography. All preference tests were conducted using UseBerry.
-				<br>
+					Preference tests were used to gather feedback on button types and typography. All preference tests were conducted using UseBerry.</p>
+
 				<picture>
 					<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Saucy_prototype_iphone@600.jpg" media="(max-width:767px)">
 					<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Saucy_iphone_prototype@1200.jpg" alt="Saucy Style Guide Image">
 				</picture>
 			</div>
-			<br>
+
 			<!--Conclusion-->
-			<div>
+			<div id=project>
 				<h3 class="center">Conclusion</h3>
 				<p>
 					The data received from the usability tests showed that users had some difficulty filtering ingredients. The categories and search problems will be updated in order to create a more successful user experience. Overall, users were able to navigate throughout the app smoothly and complete tasks in a matter of seconds. More user testing will be needed in order to identify any usability flaws. Once additional testing has been done, the data collected will be used to fix any remaining issues and design additional screens needed.
