--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 				<div class="navtoggle" id="myNavtoggle">
 			<div class="row">
 				<div class="column col-md-6 col-lg-7">
-			<a href="index.html"><img src="IMG/Logo2.png" alt="Marcelle Khalil" class="logo"></a>
+			<a href="index.html"><img src="IMG/Marcelle-Logo-5.png" alt="Marcelle Khalil-Hein" class="logo"></a>
 		</div>
 			<nav class="column col-md-6 col-lg-5">
 				<ul class="topbottombordersout">
@@ -43,10 +43,10 @@
 		</div>
 
 		<div id="about-image">
-			<div class="container">
+			<div class="center">
 				<picture>
-					<source srcset="IMG/About-Me-Image/About-Me-Image-Desktop.jpg" media="(max-width:767px)">
-					<img src="IMG/About-Me-Image/About-Me-Image-Desktop.jpg" alt="About Me Image">
+					<source srcset="IMG/About-Picture.jpg" media="(max-width:767px)">
+					<img src="IMG/About-Picture.jpg" alt="About Me Image">
 				</picture>
 			</div>
 		</div>
