--- a/Pinch.html
+++ b/Pinch.html
@@ -21,7 +21,7 @@
 			<div class="navtoggle" id="myNavtoggle">
 			<div class="row">
 				<div class="column col-md-6 col-lg-7">
-			<a href="index.html"><img src="IMG/Logo2.png" alt="Marcelle Khalil" class="logo"></a>
+			<a href="index.html"><img src="IMG/Marcelle-Logo-5.png" alt="Marcelle Khalil" class="logo"></a>
 		</div>
 			<nav class="column col-md-6 col-lg-5">
 				<ul class="topbottombordersout">
@@ -37,18 +37,13 @@
 </div>
 	</header>
 	<main>
-		<br>
 			<div id="project">
 				<h1 class="center">Pinch</h1>
-			</div>
-			<br>
-			<div>
 				<picture>
-					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Pinch_iphones_Khalil@600px.jpg" media="(max-width:767px)">
-					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_iphone_prototype@1200px.jpg" alt="Pinch Iphone Image">
+					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/new_Pinch_iphones_Khalil@600px.jpg" media="(max-width:767px)">
+					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/New_pinch_iphone_prototype@1200px.jpg" alt="Pinch Iphone Image">
 				</picture>
 			</div>
-			<br>
 			<!--Introduction/ Background-->
 			<div id="project">
 				<h3 class="center">Introduction</h3>
@@ -57,18 +52,13 @@
 					scores
 					are all located in one place.
 				</p>
-			</div>
-			<br>
-			<!--My Process-->
-			<div>
 				<picture>
 					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/pinch_desktop_mockup@600-2.jpg" media="(max-width:767px)">
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/pinch_desktop_mockup@1200-2.jpg" alt="Pinch Desktop Image">
 				</picture>
 			</div>
-			<br>
 			<!--Research-->
-			<div>
+			<div id="project">
 				<h3 class="center">Research</h3>
 				<p>
 					By conducting extensive research into the potential competitor's of Pinch and performal several user interviews, I was able to better understand the market for money-saving and banking applications. The interview was made up of the
@@ -92,9 +82,8 @@
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/competitor_analysis_pinc@1200.jpg" alt="Competitor Analysis Image">
 				</picture>
 			</div>
-			<br>
 			<!--Ideation-->
-			<div>
+			<div id="project">
 				<h3 class="center">Ideation</h3>
 				<p>
 					The data collected during the interview process allowed me to create six user stories and user flows which actions a user would take to accomplish a desired task. The user stories were divided into new customers and returning customers.
@@ -115,9 +104,8 @@
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/User_Flow_Pinch_Desktop-2.jpg" alt="User Flow">
 				</picture>
 			</div>
-			<br>
 			<!--Wireframe-->
-			<div>
+			<div id="project">
 				<h3 class="center">Wireframe</h3>
 				<p>
 					After the research and ideation phase, I developed low-fidelity wireframes both by hand and using Balsamiq. The wireframes were created with the user stories in mind.
@@ -127,9 +115,8 @@
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Low-Fidelity-Wireframes@1200.jpg" alt="Balsamiq Image">
 				</picture>
 			</div>
-			<br>
 			<!--Design-->
-			<div>
+			<div id="project">
 				<h3 class="center">Design</h3>
 				<p>
 					Due to the personal and important nature of this application, the design was made to look clean, simple, and professional. One of the emotional design concepts I applied was to refer to the psychology of color and chose a hue that would be
@@ -146,9 +133,8 @@
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/brand_guidelines_pinch@1200.jpg" alt="Brand Guidelines Image">
 				</picture>
 			</div>
-
 			<!--Prototype-->
-			<div>
+			<div id="project">
 				<h3 class="center">Prototype</h3>
 				<p>
 					I created a UseBerry scenario-based test to gain insight into user behaviors, such as click time and heatmap analysis. In addition, I conducted face-to-face tests through InVision Prototype to collect more data on user difficulty in
@@ -166,13 +152,10 @@
 					frustration. 100% of users were able to find the expenses page in under 10 seconds, while 80% of the users were able to find the goals page. All of those who did not drop off were able to find the accounts page and download a PDF from the
 					reports page.
 				</p>
-				<br>
 				<picture>
 					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/graph_image@600.jpg" media="(max-width:767px)">
-					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/graph_pinch2@1200.jpg" alt="U
-				ser Testing Grapg Image">
+					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/graph_pinch2@1200.jpg" alt="User Testing Graph Image">
 				</picture>
-				<br>
 				<picture>
 					<source srcset="IMG/Pinch-Project-Images/Pinch-Phone/Pinch_results@600.jpg" media="(max-width:767px)">
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/Pinch_results@1200.jpg" alt="User testing Image">
@@ -182,9 +165,8 @@
 					<img src="IMG/Pinch-Project-Images/Pinch-Desktop/heatmap_pinch@1200.jpg" alt="Heatmap ANalysis Image">
 				</picture>
 			</div>
-			<br>
 			<!--Conclusion-->
-			<div>
+			<div id="project">
 				<h3 class="center">Conclusion</h3>
 				<p>
 					Although the first prototype showed that the majority of the users were able to navigate through the app successfully, it also revealed some problems. Based off of the data received from user testing, I have made a variety of changes to the
