--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 
 <body>
 	<header>
-		<div class="container">
 			<div class="navtoggle" id="myNavtoggle">
 			<div class="row">
 				<div class="column col-md-6 col-lg-7">
-			<a href="index.html"><img src="IMG/Logo2.png" alt="Marcelle Khalil" class="logo"></a>
+			<a href="index.html"><img src="IMG/Marcelle-Logo-5.png" alt="Marcelle Khalil" class="logo"></a>
 		</div>
 			<nav class="column col-md-6 col-lg-5">
 				<ul class="topbottombordersout">
@@ -32,27 +31,27 @@
 
 				</ul>
 			</nav>
-		</div>
+
 	</div>
 </div>
 	</header>
 	<main>
 		<!--hero-->
 		<div id="hero">
-			<div class="container">
+			<div class="center">
 				<h1> Hi! My name is Marcelle Khalil-Hein and I am a UI/UX designer in Los Angeles, CA.</h1>
-			</div>
+		</div>
 		</div>
 		<!--End Hero-->
 
 		<!--Work-->
 		<div id="work">
 			<h2 class="center">My Work</h2>
-		</div>
+
 
 
 			<!--Pinch-->
-			<div class="project-card">
+			<div class="container">
 				<div class="row">
 					<div class="column col-md-6 col-lg-7">
 						<picture>
@@ -65,6 +64,23 @@
 						<p>Pinch is a mobile application that helps people take control of their finances.</p>
 						<p>Tools Used: Balasmiq, Sketch, Invision, UseBerry, Figma</p>
 						<a href="Pinch.html" class="button">Read more</a>
+					</div>
+				</div>
+			</div>
+			<!--Saucy-->
+			<div class="container">
+				<div class="row">
+					<div class="column col-md-6 col-lg-7">
+						<picture>
+							<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Recipe_app_Responsive_Prototypes_600px-2.jpg" media="(max-width:767px)">
+							<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Recipe_app_responsive_prototypes@1200pxe-2.jpg" alt="Saucy Responsive App Image">
+						</picture>
+					</div>
+					<div class="column col-md-6 col-lg-5">
+						<h3>Saucy</h3>
+						<p>Saucy is a responsive recipe application that allows users to add, save, rate, and share recipes.</p>
+						<p>Tools Used: Adobe XD & UseBerry</p>
+						<a href="Saucy.html" class="button">Read more</a>
 					</div>
 				</div>
 			</div>
@@ -86,23 +102,6 @@
 						</div>
 					</div>
 				</div>
-				<!--Saucy-->
-				<div class="container">
-					<div class="row">
-						<div class="column col-md-6 col-lg-7">
-							<picture>
-								<source srcset="IMG/Saucy-Project-Images/Saucy-Phone-Images/Recipe_app_Responsive_Prototypes_600px-2.jpg" media="(max-width:767px)">
-								<img src="IMG/Saucy-Project-Images/Saucy-Desktop-Images/Recipe_app_responsive_prototypes@1200pxe-2.jpg" alt="Saucy Responsive App Image">
-							</picture>
-						</div>
-						<div class="column col-md-6 col-lg-5">
-							<h3>Saucy</h3>
-							<p>Saucy is a responsive recipe application that allows users to add, save, rate, and share recipes.</p>
-							<p>Tools Used: Adobe XD & UseBerry</p>
-							<a href="Saucy.html" class="button">Read more</a>
-						</div>
-					</div>
-				</div>
 				<!--Fetch-->
 				<div class="container">
 					<div class="row">
@@ -121,6 +120,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 	</main>
 	<!--Footer-->
 	<footer id="contact">
