--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
+
+
 <body>
 	<header>
 		<div class="container">
@@ -39,9 +41,9 @@
 	<main>
 		<!--hero-->
 		<div id="hero">
-			<div class="center">
-				<h1> Hi! My name is Marcelle Khalil-Hein and I am a UI/UX designer in Los Angeles, CA.</h1>
-			</div>
+				<picture>
+					<img srcset="IMG/hero.png" alt="Hero Image">
+					</picture>
 		</div>
 		<!--End Hero-->
 
