--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<div class="column col-md-6 col-lg-7">
 							<picture>
 								<source srcset="IMG/Dog-Walking-App/Fetch-Phone/iOS_Mockups_Fecth.jpg" media="(max-width:767px)">
-								<img src="IMG/Dog-Walking-App/Fetch-Desktop/Android_Mockups_fetch@1200.jpg" alt="My Image">
+								<img src="IMG/Dog-Walking-App/Fetch-Desktop/Android_Mockups_fetch@1200.jpg" alt="Fetch App Image">
 							</picture>
 						</div>
 						<div class="column col-md-6 col-lg-5">
@@ -126,7 +126,33 @@
 					</div>
 				</div>
 			</div>
+
+	<!--Coming Soon-->
+
+		<h2 class="center">- Coming Soon -</h2>
+	<div class="container">
+		<div class="row">
+			<div class="column col-md-6 col-lg-7">
+				<picture>
+					<source srcset="IMG/Student-Dashboard@600.jpg" media="(max-width:767px)">
+					<img src="IMG/Student-Dashboard@1200.jpg" alt="Learning Portal Image">
+				</picture>
+			</div>
+			<div class="column col-md-6 col-lg-5">
+				<h3>SCU's Learning Portal</h3>
+				<p>A free learning platform for middle and high school students.</p>
+				<p>Tools Used: Illustrator, XD</p>
+	</div>
+</div>
+<!--Email Marketing Designs-->
+				<br>
+				<br>
+			</div>
 		</div>
+	</div>
+</div>
+</div>
+
 	</main>
 	<!--Footer-->
 	<footer id="contact">
