--- a/about.html
+++ b/about.html
@@ -37,23 +37,20 @@
 		</div>
 	</header>
 	<main>
-		<div id="about-me">
+		<div id="about-image">
 			<div class="container">
 				<h1 class="center">About Me</h1>
 			</div>
-		</div>
 
-		<div id="about-image">
 			<div class="center">
 				<picture>
-					<source srcset="IMG/About-Picture.jpg" media="(max-width:767px)">
-					<img src="IMG/About-Picture.jpg" alt="About Me Image">
+					<source srcset="IMG/About-me-Image/travel-about-pic@600.jpg" media="(max-width:767px)">
+					<img src="IMG/About-me-Image/travel-about-pic@1200.jpg" alt="About Me Image">
 				</picture>
 			</div>
-		</div>
+
 
 		<!--My Story-->
-		<div id="my-story">
 			<div class="container">
 				<div class="row">
 					<div class="column col-md-8 col-lg-9">
@@ -62,7 +59,7 @@
 							UC Irvine. I worked as a high school science teacher for several years, which taught me how to clearly communicate my goals and expectations to a diverse group of young people, in addition to exposing me to a variety of education apps.
 							My diverse background has provided me with the necessary tools to excel as a UI/ UX designer. My time spent with students and affinity for empathizing with people has helped me to create user-centric designs.
 						</p>
-						<a href="Files/Resume_July_2020_Khalil-compressed.pdf" target="blank" class="button">Download My Resume</a>
+						<a href="Files/Khalil-Hein_Resume.pdf" target="blank" class="button">Download My Resume</a>
 					</div>
 					<div class="column col-md-4 col-lg-3">
 						<h2>Skills & Tools</h2>
@@ -92,6 +89,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 
 
 	</main>
@@ -108,7 +106,7 @@
 				<a href="mailto:marcellemkhalil@gmail.com" class="button contact">Email Me</a>
 			</div>
 		</div>
-		
+
 		<!--social media icons-->
 		<div class="container">
 			<div class="row">
