--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<div class="column col-md-6 col-lg-5">
 						<h3>Saucy</h3>
 						<p>Saucy is a responsive recipe application that allows users to add, save, rate, and share recipes.</p>
-						<p>Tools Used: Adobe XD & UseBerry</p>
+						<p>Tools Used: Sketch & UseBerry</p>
 						<a href="Saucy.html" class="button">Read more</a>
 					</div>
 				</div>
@@ -93,15 +93,15 @@
 				<div class="row">
 					<div class="column col-md-6 col-lg-7">
 						<picture>
-							<source srcset="IMG/Audio-Education-App/Audio-App-Phone/Uproar_Prototypes@600.jpg" media="(max-width:767px)">
-							<img src="IMG/Audio-Education-App/Audio-App-Desktop/Uproar_Prototype@1200.jpg" alt="Audio Education App Image">
+							<source srcset="IMG/Audio-Education-App/uproar-index@600.jpg" media="(max-width:767px)">
+							<img src="IMG/Audio-Education-App/uproar-index@1200.jpg" alt="Audio Education App Image">
 						</picture>
 					</div>
 					<div class="ccolumn col-md-6 col-lg-5">
 						<h3>Uproar</h3>
-						<p>Uproar is a music and podcast application for students and educators.</p>
-						<p>Tools Used: Sketch, Invision, UseBerry</p>
-						<a href="#" class="button">Read more</a>
+						<p>Uproar is a teacher profile application used to increase communication and collaboration among educators.</p>
+						<p>Tools Used: Adobe XD</p>
+						<a href="Uproar.html" class="button">Read more</a>
 						<div class="row">
 						</div>
 					</div>
@@ -144,7 +144,7 @@
 				<p>Tools Used: Illustrator, XD</p>
 	</div>
 </div>
-<!--Email Marketing Designs-->
+
 				<br>
 				<br>
 			</div>
@@ -152,7 +152,40 @@
 	</div>
 </div>
 </div>
-
+<!--Email Marketing Designs-->
+<div id="email-marketing">
+	<h2 class="center">Email Marketing Designs</h2>
+<div class="container">
+	<div class="row">
+		<div class="column col-md-6 col-lg-7">
+			<picture>
+				<source srcset="IMG/Mandalorian@600.jpg" media="(max-width:767px)">
+				<img src="IMG/Mandalorian@1200.jpg" alt="Mandalorian Season 2 Image">
+			</picture>
+		</div>
+		<div class="ccolumn col-md-6 col-lg-5">
+			<picture>
+				<source srcset="IMG/Frozen_II_Email_@600.jpg" media="(max-width:767px)">
+				<img src="IMG/Frozen_II_Email_@1200.jpg" alt="Frozen II Email Image">
+			</picture>
+			</div>
+		</div>
+	<div class="container">
+		<div class="row">
+			<div class="column col-md-6 col-lg-7">
+				<picture>
+					<source srcset="IMG/AARP-2-cards@600.jpg" media="(max-width:767px)">
+					<img src="IMG/AARP-2-cards@1200.jpg" alt="AARP Email Image">
+				</picture>
+			</div>
+			<div class="ccolumn col-md-6 col-lg-5">
+				<picture>
+					<source srcset="IMG/Hamilton-rounded-image@600.jpg" media="(max-width:767px)">
+					<img src="IMG/Hamilton-rounded-image@1200.jpg" alt="Hamilton Email">
+				</picture>
+				</div>
+			</div>
+	</div>
 	</main>
 	<!--Footer-->
 	<footer id="contact">
