--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<h3>Fetch</h3>
 							<p>Fetch is a native app created for loving pet parents.</p>
 							<p>Tools Used: Sketch, UseBerry, Figma</p>
-							<a href="#" class="button">Read more</a>
+							<a href="Fetch.html" class="button">Read more</a>
 							<br>
 							<br>
 						</div>
