--- a/Uproar.html
+++ b/Uproar.html
@@ -40,11 +40,10 @@
 	<main>
 		<div id="project">
 			<h1 class="center">Uproar</h1>
-			<picture>
-				<source srcset="gifs/Uproar-teacher-home.gif" media="(max-width:767px)">
-				<img src="gifs/Uproar-teacher-home.gif" alt="Teacher Home Gif">
+			<<picture>
+				<source srcset="IMG/Audio-Education-App/uproar-index@600.jpg" media="(max-width:767px)">
+				<img src="IMG/Audio-Education-App/uproar-index@1200.jpg" alt="Audio Education App Image">
 			</picture>
-
 
 			<!--Introduction/ Background-->
 
@@ -118,11 +117,6 @@
 			<p>
 				User testing still needs to be conducted in order to improve the application. There was no time to conduct user testing within the four day span of this project.
 			</p>
-
-			<picture>
-				<source srcset="gifs/all-screens-teacher-profile.gif" media="(max-width:767px)">
-				<img src="gifs/all-screens-teacher-profile.gif" alt="Teacher Profile Gif">
-			</picture>
 
 
 
